--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "kafka-node": "^5.0.0",
     "mongoose": "^7.0.3",
     "typescript": "^5.0.3"
   },
